# gmp

./: .gitignore  ChangeLog  Makefile.in  NEWS  README  README.md  aclocal.m4  configure  configure.ac
m4/: ChangeLog
po/: .gitignore  ChangeLog  gmp.pot  ru.gmo  ru.po
src/: .gitignore  Makefile.am  Makefile.in  config.h.in  main.cpp
